# ComfyUI-TLBVFI-TF32

./: .gitignore  LOOP_GUIDE.md  MIGRATION.md  README.md  __init__.py  analyze_memory.py  conftest.py  pipeline_comparison.md  pyproject.toml  pytest.ini  requirements.txt  test_auto_tile_size.py  test_tiling_integration.py  tlbvfi_node.py
.claude/: settings.local.json
.github/workflows/: test.yml
TLBVFI/VFI/archs/: VFIformer_arch.py  transformer_layers.py  warplayer.py
TLBVFI/configs/: Template-LBBDM-video.yaml
TLBVFI/cupy_module/: dsepconv.py
TLBVFI/model/BrownianBridge/: BrownianBridgeModel.py  LatentBrownianBridgeModel.py
TLBVFI/model/BrownianBridge/base/modules/: attention.py  maxvit.py
TLBVFI/model/BrownianBridge/base/modules/diffusionmodules/: model.py  openaimodel.py  util.py
TLBVFI/model/VQGAN/: quantize.py  vqgan.py
docs/: ComfyUI-Frame-Interpolation-Analysis.en.md  ComfyUI-Frame-Interpolation-Analysis.md  ComfyUI-Frame-Interpolation-Analysis_from_CC.md  Production-Improvement-Plan.md  TLBVFI-Chunked-Interpolation-Analysis.md  TLBVFI-Original-Implementation-Analysis.md  comfyui_frame_interpolation_analysis_from_codex.md  frame_interpolation_consolidated.md
examples/: README.md  chunk_workflow_example.json  simple_workflow_example.json
nodes/: __init__.py  batch_interpolator_v2.py  chunk_processor.py  chunk_video_saver.py  chunk_video_saver_v2.py  display_text.py  frame_from_batch.py  frame_pair_slicer.py  model_cache_manager.py  tlbvfi_interpolator.py  tlbvfi_interpolator_v2.py  video_concatenator.py  video_concatenator_v2.py
tests/: README.md  conftest.py  test_2k_interpolation.py  test_4k_interpolation.py  test_frame_pair_slicer.py  test_integration.py  test_node_registration.py  test_video_loading.py
utils/: __init__.py  manifest_manager.py  memory_manager.py  model_loader.py  tiling.py
workflows/: 01_basic_v2_interpolation.json  02_batch_loop_interpolation.json  03_chunk_processor_example.json  03_quality_comparison.json  04_video_loader_v2.json  README.md  WORKFLOW_GUIDE.md  simple_v2_test.json
